--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ body {
         margin-top: 30px;
     }
     .header-sec {
-        height: 500px;
+        height: fit-content;
+        margin-bottom: 50px;
     }
 }
 @media only screen and (max-width: 486px) {
@@ -61,9 +62,9 @@ body {
     }
 }
 @media only screen and (max-width: 357px) {
-    /* .header-sec {
-        height: 150vw;
-    } */
+    .header-sec {
+       margin-bottom: 40px;
+    }
     .avater{
         display: none;
     }
