--- a/style.css
+++ b/style.css
@@ -122,8 +122,29 @@ body {
         margin: 0 auto 40px auto;
     }
 }
+/* work section */
+.work-sec {
+    background-image: url("images/latest-work-bg.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: right;
+    height: fit-content;
+    padding: 20% 0;
+}
+.work-sec h2 {
+    margin-bottom: 50px;
+}
+.work img {
+    width: 98%;
+    margin: 2%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
+}
 
-
-
-
-/* third section */
+@media only screen and (max-width: 575px) {
+    .work {
+        margin: 10px auto;
+        border-radius: 10px;
+        box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
+    }
+}
