--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
     background-size: 100% auto;
     background-position: right;
     height: fit-content;
-    padding: 20% 0;
+    padding: 7% 0;
 }
 .work-sec h2 {
     margin-bottom: 50px;
@@ -140,10 +140,19 @@ body {
     border-radius: 10px;
     box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
 }
+.work img:hover {
+    width: 100%;
+    box-shadow: 0px 0px 25px 3px rgba(0, 217, 255, 0.36);
+}
 
 @media only screen and (max-width: 575px) {
     .work {
         margin: 10px auto;
+        border-radius: 10px;
+    }
+    .work img {
+        width: 98%;
+        margin: 2%;
         border-radius: 10px;
         box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
     }
