--- a/style.css
+++ b/style.css
@@ -157,3 +157,43 @@ body {
         box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
     }
 }
+/* Fourth section(What clients say) */
+footer {
+    padding-top: 100px;
+    background-image: url("images/footer-bg.png");
+    background-position: center:
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    height: fit-content;
+}
+.e-mail {
+    background-color: #ec4c7a;
+    color: white;
+    padding: 50px 10px;
+    border-radius: 20px;
+    width: 50%;
+}
+footer small {
+    color: gray
+}
+footer > div > * {
+    margin: 20px auto;
+}
+.copyright {
+    display: inline-block;
+    margin-top: 80px;
+    margin-bottom: 20px;
+} 
+
+@media only screen and (max-width: 767px) {
+    .e-mail {
+        width: 70%;
+
+    }
+}
+@media only screen and (max-width: 480px) {
+    .e-mail h5 {
+        font-size: 16px;
+        word-break: break-all;
+    }
+}
