--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ body {
     background-repeat: no-repeat;
     background-position: top;
     background-size: 100% auto;
-    height: 55vw;
+    height: 700px;
     padding-top: 20%;
-
 }
 .half-width {
     width: 50%;
@@ -114,7 +113,7 @@ body {
 @media only screen and (max-width: 575px) {
     .second-sec {
         text-align: center;
-        padding: 20px;
+        padding: 80px 20px;
     }
     .second-sec img {
         width: 40%;
@@ -129,7 +128,7 @@ body {
     background-size: 100% auto;
     background-position: right;
     height: fit-content;
-    padding: 7% 0;
+    padding: 100px 0;
 }
 .work-sec h2 {
     margin-bottom: 50px;
@@ -148,20 +147,13 @@ body {
 @media only screen and (max-width: 575px) {
     .work {
         margin: 10px auto;
-        border-radius: 10px;
-    }
-    .work img {
-        width: 98%;
-        margin: 2%;
-        border-radius: 10px;
-        box-shadow: 0px 0px 25px 2px rgba(50, 50, 50, 0.16);
     }
 }
 /* Fourth section(What clients say) */
 footer {
     padding-top: 100px;
     background-image: url("images/footer-bg.png");
-    background-position: center:
+    background-position: center;
     background-repeat: no-repeat;
     background-size: 100% auto;
     height: fit-content;
@@ -169,7 +161,7 @@ footer {
 .e-mail {
     background-color: #ec4c7a;
     color: white;
-    padding: 50px 10px;
+    padding: 50px 20px;
     border-radius: 20px;
     width: 50%;
 }
@@ -181,8 +173,7 @@ footer > div > * {
 }
 .copyright {
     display: inline-block;
-    margin-top: 80px;
-    margin-bottom: 20px;
+    margin: 80px 0 20px 0;
 } 
 
 @media only screen and (max-width: 767px) {
